# InternshipTasks

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  gen.py  main.cpp
src/DigitalLab/: CMakeLists.txt  DigitalLab.cpp  DigitalLab.hpp  README.md  main.cpp
src/Pizza/: CMakeLists.txt  Pizza.cpp  Pizza.hpp  README.md  main.cpp
src/RGBGame/: CMakeLists.txt  README.md  RGBGame.cpp  RGBGame.hpp  main.cpp
src/Railroads/: CMakeLists.txt  README.md  Railroads.cpp  Railroads.hpp  main.cpp
src/TreasureHunt/: CMakeLists.txt  README.md  TreasureHunt.cpp  TreasureHunt.hpp  main.cpp
test/: CMakeLists.txt  DigitalLabTests.cpp  PizzaTests.cpp  RGBGameTests.cpp  RailroadsTests.cpp  TreasureHuntTests.cpp
test/data/DigitalLab/: expected_1.txt  expected_4.txt  expected_5.txt  expected_6.txt  expected_8.txt  huge_expected_2.txt  huge_input_1.txt  huge_input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt
test/data/Pizza/: expected_1.txt  expected_2.txt  expected_3.txt  expected_4.txt  expected_5.txt  expected_6.txt  expected_7.txt  expected_8.txt  expected_9.txt  huge_input_2.txt  input_1.txt  input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt  input_9.txt
test/data/RGBGame/: expected_1.txt  expected_2.txt  expected_3.txt  expected_4.txt  input_1.txt  input_2.txt  input_3.txt  input_4.txt
test/data/Railroads/: expected_5.txt  input_1.txt  input_2.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt  input_9.txt
test/data/TreasureHunt/: expected_2.txt  input_10.txt  input_11.txt  input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt  input_9.txt
